# peak-prominence

./: .gitignore  LICENSE  README.md  pyproject.toml
peakprom/: __init__.py  core.py  plot.py  utils.py
tests/: test_core.py
