[project]
name = "peak-prominence"
version = "0.1.0"
description = "Tool for detecting prominent peaks in irregular data."
authors = [{ name = "Marcin Krysiak", email = "m.t.krysiak@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/marcintadeuszkrysiak/peak-prominence"
"Issue Tracker" = "https://github.com/marcintadeuszkrysiak/peak-prominence/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

